--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style_procesos.css">
 </head>
 <body>
-    <div class="calculator">
+    <div id="calculator">
         <h3 id="h3">Datos del proceso.</h3>
         <input type="text" id="id" class="display" placeholder="ID del proceso." oninput="soloNumeros(this)">
         <input type="text" id="nombre" class="display" placeholder="Nombre de programador.">
