added batch to page without loading bar

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style_procesos.css">
 </head>
 <body>
+
     <div id="calculator">
         <h3 id="h3">Datos del proceso.</h3>
         <input type="text" id="id" class="display" placeholder="ID del proceso." oninput="soloNumeros(this)">
@@ -14,6 +15,61 @@
         <input type="number" id="tiempo" class="display" placeholder="Tiempo maximo estimado (seg).">
         <button class="btn" onclick="cargarProceso()">Listo</button>
     </div>
+
+    <main id="main" class="m-10 rounded-xl bg-gray-200 p-10 hidden" style="display: none;">
+
+        <div class="my-5">
+            <h1 class="text-5xl font-extrabold">Batch Programming</h1>
+        </div>
+
+        <div class="remaing-batch">
+            <h2 class="text-3xl font-semibold" id="remaining-batch">  </h2>
+        </div>
+
+        <div class="batch-content">
+
+            <div>
+                <h2 class="text-2xl font-semibold">Lote Actual</h2>
+                <table id="current-batch">
+                    <tr>
+                        <th>ID</th>
+                        <th>TME</th>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <h2 class="text-2xl font-semibold">Proceso en Ejecucion</h2>
+                <table id="current-process">
+                    <tr>
+                        <th>Nombre</th>
+                        <th>ID</th>
+                        <th>TME</th>
+                        <th>OPE</th>
+                        <th>TT</th>
+                        <th>TR</th>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <h2 class="text-2xl font-semibold">Procesos Terminados</h2>
+                <table id="ended-process">
+                    <tr>
+                        <th>ID</th>
+                        <th>OPE</th>
+                        <th>RES</th>
+                        <th>LOTE</th>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
+
+        <div id="loader" class="loader"></div>
+        <p id="timer">Tiempo transcurrido: 0 segundos</p>
+
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
