Updated first version without loading bar

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -49,6 +49,14 @@
                         <th>TT</th>
                         <th>TR</th>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td id="tiempot"></td>
+                        <td id="tiempor"></td>
+                    </tr>
                 </table>
             </div>
 
@@ -66,7 +74,6 @@
 
         </div>
 
-        <div id="loader" class="loader"></div>
         <p id="timer">Tiempo transcurrido: 0 segundos</p>
 
     </main>
