updated batch message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="display" class="display" placeholder="No. de lotes.">
+        <input type="text" id="display" class="display" placeholder="No. de procesos.">
         <button class="btn" onclick="enter()">Listo</button>
     </div>
     <script src="main.js"></script>
