Updated, P,C, blocked failed

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -63,7 +63,7 @@
                 <table id="blocked-process">
                     <tr>
                         <th>ID</th>
-                        <th>TT</th>
+                        <th id="tiempob">TT</th>
                     </tr>
                 </table>
             </div>
