--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="calculator">
         <input type="text" id="display" class="display" placeholder="No. de procesos." oninput="soloNumeros(this)">
+        <input type="text" id="quantum" class="display" placeholder="No. de Quantum." oninput="soloNumeros(this)">
         <button class="btn" onclick="enter()">Listo</button>
     </div>
     <script src="main.js"></script>
