updated ramdom size to processes and dark mode

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Round Robin</title>
+    <title>Paginacion Simple</title>
     <link rel="stylesheet" type="text/css" href="style_procesos.css">
     <link rel="stylesheet" type="text/css" href="ventana.css">
 </head>
@@ -31,7 +31,7 @@
     <main id="main">
 
         <div>
-            <h1>Round Robin</h1>
+            <h1>Paginacion Simple</h1>
         </div>
 
         <div>
