added grid and showed size

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -67,6 +67,7 @@
                 <table id="current-process">
                     <tr>
                         <th>ID</th>
+                        <th>SIZE</th>
                         <th>OPE</th>
                         <th>TME</th>
                         <th>TT</th>
@@ -74,6 +75,7 @@
                         <th>QT</th>
                     </tr>
                     <tr>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -99,6 +101,7 @@
                 <table id="ended-process">
                     <tr>
                         <th>ID</th>
+                        <th>SIZE</th>
                         <th>OPE</th>
                         <th>RES</th>
                         <th>TL</th>
@@ -114,6 +117,62 @@
 
         <p id="timer">Tiempo transcurrido: 0 segundos</p>
 
+        <div id="paginacion">
+            <!-- Primera fila -->
+            <div class="cuadro pag-1"></div>
+            <div class="cuadro pag-2"></div>
+            <div class="cuadro pag-3"></div>
+            <div class="cuadro pag-4"></div>
+            <div class="cuadro pag-5"></div>
+            <div class="cuadro pag-6"></div>
+            <div class="cuadro pag-7"></div>
+            <div class="cuadro pag-8"></div>
+            <div class="cuadro pag-9"></div>
+            <div class="cuadro pag-10"></div>
+            <br>
+            <!-- Segunda fila -->
+            <div class="cuadro pag-11"></div>
+            <div class="cuadro pag-12"></div>
+            <div class="cuadro pag-13"></div>
+            <div class="cuadro pag-14"></div>
+            <div class="cuadro pag-15"></div>
+            <div class="cuadro pag-16"></div>
+            <div class="cuadro pag-17"></div>
+            <div class="cuadro pag-18"></div>
+            <div class="cuadro pag-19"></div>
+            <div class="cuadro pag-20"></div>
+            <br>
+            <!-- Tercera fila -->
+            <div class="cuadro pag-21"></div>
+            <div class="cuadro pag-22"></div>
+            <div class="cuadro pag-23"></div>
+            <div class="cuadro pag-24"></div>
+            <div class="cuadro pag-25"></div>
+            <div class="cuadro pag-26"></div>
+            <div class="cuadro pag-27"></div>
+            <div class="cuadro pag-28"></div>
+            <div class="cuadro pag-29"></div>
+            <div class="cuadro pag-30"></div>
+            <br>
+            <!-- Cuarta fila -->
+            <div class="cuadro pag-31"></div>
+            <div class="cuadro pag-32"></div>
+            <div class="cuadro pag-33"></div>
+            <div class="cuadro pag-34"></div>
+            <div class="cuadro pag-35"></div>
+            <div class="cuadro pag-36"></div>
+            <div class="cuadro pag-37"></div>
+            <div class="cuadro pag-38"></div>
+            <div class="cuadro pag-39"></div>
+            <div class="cuadro pag-40"></div>
+            <br>
+            <!-- Quinta fila -->
+            <div class="cuadro pag-41"><p>S.O</p></div>
+            <div class="cuadro pag-42"><p>S.O</p></div>
+            <div class="cuadro pag-43"><p>S.O</p></div>
+            <div class="cuadro pag-44"><p>S.O</p></div>
+        </div>
+ 
     </main>
     <script src="script.js"></script>
 </body>
