updated grid and memory size

--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -45,6 +45,7 @@
                 <table id="new-process">
                     <tr>
                         <th>ID</th>
+                        <th>SIZE</th>
                         <th>TME</th>
                         <th>TT</th>
                     </tr>
@@ -56,6 +57,7 @@
                 <table id="current-batch">
                     <tr>
                         <th>ID</th>
+                        <th>SIZE</th>
                         <th>TME</th>
                         <th>TT</th>
                     </tr>
