--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Paginacion Simple</title>
+    <title id="main-title">Paginacion Simple</title>
     <link rel="stylesheet" type="text/css" href="style_procesos.css">
     <link rel="stylesheet" type="text/css" href="ventana.css">
 </head>
@@ -121,7 +121,7 @@
 
         <div id="paginacion">
             <!-- Primera fila -->
-            <div class="cuadro pag-1"></div>
+            <div class="cuadro pag-1" ></div>
             <div class="cuadro pag-2"></div>
             <div class="cuadro pag-3"></div>
             <div class="cuadro pag-4"></div>
