--- a/procesos/procesos.html
+++ b/procesos/procesos.html
@@ -100,6 +100,16 @@
             </div>
 
             <div>
+                <h3 class="text-2xl font-semibold">Suspendidos</h3>
+                <table id="suspended-process">
+                    <tr>
+                        <th>ID</th>
+                        <th id="tamano">SIZE</th>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
                 <h3 class="text-2xl font-semibold">Terminados</h3>
                 <table id="ended-process">
                     <tr>
